Resolved flickering issue

--- a/style.css
+++ b/style.css
@@ -66,11 +66,14 @@ h1 {
   max-width: 1200px;
 }
 
+.cardContainer {
+  margin: 10px;
+}
+
 .card {
   background-color: #eee;
   border-radius: 10px;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.5);
-  margin: 10px;
   padding: 20px;
   align-items: center;
   text-align: center;
@@ -84,6 +87,7 @@ h1 {
   perspective: 150rem;
   position: relative;
 }
+
 @media screen and (max-width: 600px) {
   .card {
     min-width: 45vw !important;
@@ -91,11 +95,12 @@ h1 {
   }
 }
 
-.card:hover {
+.cardContainer:hover .card {
   transform: rotateY(180deg);
   cursor: pointer;
   transition: 0.25s ease-in-out;
 }
+
 .types {
   display: flex;
 }
